k8s/legendaries/kube-system/kube-controller-manager.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-controller-manager
  namespace: kube-system
  labels:
    k8s-app: kube-controller-manager
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10252

---
apiVersion: v1
kind: Endpoints
metadata:
  name: kube-controller-manager
  namespace: kube-system
  labels:
    k8s-app: kube-controller-manager
subsets:
  - addresses:
      - ip: 172.17.3.17
      - ip: 172.17.3.18
      - ip: 172.17.3.19
    ports:
      - name: http-metrics
        port: 10252
