k8s/legendaries/kube-system/kube-scheduler.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    k8s-app: kube-scheduler
spec:
  clusterIP: None
  ports:
    - name: https-metrics
      port: 10250

---
apiVersion: v1
kind: Endpoints
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    k8s-app: kube-scheduler
subsets:
  - addresses:
      - ip: 172.17.3.17
      - ip: 172.17.3.18
      - ip: 172.17.3.19
    ports:
      - name: https-metrics
        port: 10250
