k8s/legendaries/kube-system/minio.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - &hostname console.minio.hannahs.family
      secretName: *hostname
  rules:
    - host: *hostname
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minio-console
                port:
                  name: http-console
