k8s/legendaries/kube-system/oauth2-proxy.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-forward-auth
  namespace: kube-system
spec:
  forwardAuth:
    address: http://oauth2-proxy/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-auth-headers
  namespace: kube-system
spec:
  headers:
    sslRedirect: true
    stsSeconds: 315360000
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    sslHost: hannahs.family
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: PathPrefix(`/oauth2`)
      kind: Rule
      priority: 100
      services:
        - name: oauth2-proxy
          kind: Service
          port: 80
      middlewares:
        - name: oauth2-proxy-auth-headers
